<resources>
    <string name="app_name">MusicStructureApp</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_albums">AlbumsActivity</string>
    <string name="title_activity_song">Song list</string>
    <string name="playlist">Your playlists</string>
    <string name="artist">Artists list</string>
    <string name="album">Albums list</string>
    <string name="buy">Play and buy music</string>
    <string name="songs">Song list</string>
    <string name="buy_details">This activity will handle the playing of song using MediaPlayer API from user list, or searching new songs, add as favourite, or purchase that.</string>
    <string name="song_details">This activity show the songs of chosen category, in the ListView. </string>
    <string name="carbonsweet">Carbonsweet</string>
    <string name="the_carboonfools">The Carbonfools - Birthday</string>
    <string name="listName1">POP Music Playlist 2017 (Songs of All Time)</string>
    <string name="listNum1">21 Songs</string>
    <string name="listName2">Summer Special April Mix (Songs of Chill Out)</string>
    <string name="listNum2">35 Songs</string>
    <string name="artistName2">Burak Yeter</string>
    <string name="now_playing">Now Playing</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="recent_added_albums">Recent Played</string>
    <string name="today_s_top_hits_2017">Today\'s TOP Hits 2017</string>
    <string name="carbonfools_birthday">Carbonfools - Birthday 2012 </string>
    <string name="swalla_jason_derulo">Swalla - Jason Derulo 2016 </string>
    <string name="_11_songs_2016">11 Songs</string>
    <string name="_16_songs_2016">16 Songs</string>
    <string name="_12_songs">12 Songs</string>
    <string name="burak_yeter_album">Burak Yeter - Tuesday 2016</string>
    <string name="the_carbonfools_birthday">The Carbonfools - Birthday</string>
    <string name="burak">Burak</string>
    <string name="carboon">Carboon</string>
    <string name="starley">Starley</string>
    <string name="swalla">Swalla</string>
    <string name="vekony">Vekony</string>
    <string name="buykep">buykep</string>
</resources>
