<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BuyActivity"
    tools:showIn="@layout/activity_buy">

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include
            android:id="@+id/music_player_layout"
            layout="@layout/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            style="@style/ListStyle"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Artist_name1"
                style="@style/ArtistName"
                android:background="#AAFF213F"
                android:gravity="center_horizontal"
                android:text="@string/the_carbonfools_birthday" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/play_now"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_weight="1"
                    android:background="@drawable/carbonsweet"
                    android:contentDescription="@string/buykep"
                    android:fitsSystemWindows="true"
                    tools:ignore="ContentDescription,InefficientWeight" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_dimen"
                        android:layout_height="@dimen/icon_dimen"
                        android:layout_weight="1"
                        android:src="@drawable/ic_favorite_border_white_48dp"
                        android:contentDescription=""
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="@dimen/icon_dimen"
                        android:layout_height="@dimen/icon_dimen"
                        android:layout_weight="1"
                        android:src="@drawable/ic_skip_previous_white_48dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/play_actual_song"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_play_circle_outline_white_48dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="@dimen/icon_dimen"
                        android:layout_height="@dimen/icon_dimen"
                        android:layout_weight="1"
                        android:src="@drawable/ic_skip_next_white_48dp"
                        tools:ignore="ContentDescription" />

                    <ImageView

                        android:layout_width="@dimen/icon_dimen"
                        android:layout_height="@dimen/icon_dimen"
                        android:layout_weight="1"
                        android:src="@drawable/ic_add_shopping_cart_white_48dp"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_details" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>